--- a/src/alerts.scss
+++ b/src/alerts.scss
@@ -65,6 +65,15 @@
 	.alert-link {
 		color: #0b2e13;
 	}
+	.mr-alert-button {
+		color: #155724;
+		background: #a4eab5;
+		border: 2px solid #c3e6cb;
+		&:hover {
+			color: #155724;
+			background: #6ce98a;
+		}
+	}
 }
 
 .alert-info {
@@ -81,6 +90,15 @@
 	.mr-alert-icon,
 	.alert-link {
 		color: #062c33;
+	}
+	.mr-alert-button {
+		color: #0c5460;
+		background: #84d9e9;
+		border: 2px solid #bee5eb;
+		&:hover {
+			color: #0c5460;
+			background: #69d2e5;
+		}
 	}
 }
 
@@ -99,6 +117,15 @@
 	.alert-link {
 		color: #533f03;
 	}
+	.mr-alert-button {
+		color: #533f03;
+		background: #f9d86e;
+		border: 2px solid #ffeeba;
+		&:hover {
+			color: #533f03;
+			background: #f5cb47;
+		}
+	}
 }
 
 .alert-danger {
@@ -115,6 +142,15 @@
 	.mr-alert-icon,
 	.alert-link {
 		color: #491217;
+	}
+	.mr-alert-button {
+		color: #721c24;
+		background: #f9a1a9;
+		border: 2px solid #f5c6cb;
+		&:hover {
+			color: #721c24;
+			background: #f5858f;
+		}
 	}
 }
 
@@ -136,6 +172,15 @@
 	.alert-link {
 		color: #686868;
 	}
+	.mr-alert-button {
+		color: #818182;
+		background: #dcdcdc;
+		border: 2px solid #fdfdfe;
+		&:hover {
+			color: #818182;
+			background: #d1cfcf;
+		}
+	}
 }
 
 .alert-dark {
@@ -152,6 +197,15 @@
 	.mr-alert-icon,
 	.alert-link {
 		color: #040505;
+	}
+	.mr-alert-button {
+		color: #383d41;
+		background: #b2b3b6;
+		border: 2px solid #d6d8db;
+		&:hover {
+			color: #383d41;
+			background: #a1a1a2;
+		}
 	}
 }
 .mr-button {
